# wgpu-clouds

./: .gitignore  Cargo.toml
assets/definitions/: biomes.json  blocks.json  structures.json
assets/shaders/: terrain_material.wgsl  terrain_prepass.wgsl
src/: atmosphere.rs  chunk.rs  data.rs  lib.rs  main.rs  mesher.rs  noise.rs  physics.rs  player.rs  renderer.rs  shader.rs  shader.wgsl  shader_gen.rs  texture.rs  world.rs  world_gen.rs
src/shader/: common.wgsl  post.wgsl  rain.wgsl  sky.wgsl  voxel.wgsl  weather.wgsl
