[package]
name = "wgpu-clouds"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
bytemuck = { version = "1.24.0", default-features = false, features = ["derive"] }
cgmath = { version = "0.18.0", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
env_logger = { version = "0.11.8", default-features = false }
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = { version = "0.4.28", default-features = false }
noise = { version = "0.9.0", default-features = false }
pollster = { version = "0.4.0", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
rayon = { version = "1.11.0", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
wgpu = { version = "27.0.1", default-features = false, features = ["vulkan", "wgsl"] }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06", "wayland"] }
